<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/header2"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sandstorm_text" />

    <ImageView
        android:id="@+id/button_close_edit"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/ripple_5"
        android:tint="@color/colorForeground"
        app:layout_constraintBottom_toBottomOf="@+id/header2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_close_24px" />

    <fun.sandstorm.photoeditor.PhotoEditorView
        android:id="@+id/photoEditorView"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/undo_redo_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header2"
        app:photo_src="@drawable/thanks">

    </fun.sandstorm.photoeditor.PhotoEditorView>

    <FrameLayout
        android:id="@+id/edit_fragment_container"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/undo_redo_container"
        android:layout_width="408dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_fragment_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>