...
        <Button
            android:id="@+id/button_draw_image"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/ripple_2"
            app:layout_constraintBottom_toBottomOf="@+id/button_share_image"
            app:layout_constraintEnd_toStartOf="@+id/button_add_sticker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_share_image" />

        <Button
            android:id="@+id/button_add_sticker"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/ripple_2"
            app:layout_constraintBottom_toBottomOf="@+id/button_share_image"
            app:layout_constraintEnd_toStartOf="@+id/button_add_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_draw_image"
            app:layout_constraintTop_toTopOf="@+id/button_share_image" />

        <Button
            android:id="@+id/button_add_text"
...
